fixed side clipping on images in search results

--- a/app/shared/profile-sm/profile-sm.styles.css
+++ b/app/shared/profile-sm/profile-sm.styles.css
@@ -4,6 +4,9 @@
   overflow: hidden;
   border-radius: 50%;
 }
+.circle img {
+  width:100%;
+}
 a {
   /* TODO: Change to white when background is addded */
   color: grey;
